# games-101-hw

./: .gitignore  Action.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  README.md  Rasterizer  Transformation.cpp  Transformation.hpp  Triangle.cpp  main.cpp  note.md  rasterizer.cpp  rasterizer.hpp
src/: Cube.cpp  Cube.hpp  Transformation.cpp  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
